<resources>

    <string name="app_name">yaru</string>
    <string name="app_description">yet another random user</string>
    <string name="gender">Gender</string>
    <string name="random">Random</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="generate">Generate</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="age">Age</string>
    <string name="email">E-mail</string>
    <string name="phone">Phone</string>

</resources>